--- a/style.css
+++ b/style.css
@@ -1,26 +1,5 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: white;
-  font-family: 'Courier New', Courier, monospace;
-}
-
-#container {
-  border: 0px solid black;
-  width: 100%;
-}
-
-#header {
-  border: 0px solid black;
-  width: 100%;
-  text-align: center;
-}
-
-#data {
-  border: 0px solid red;
-  padding: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 320px;
-  margin: auto;
+  background-color: black;
 }
