--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: gray;
+
 }
 
 #screen {
-  width: 50%;
   border: 0px solid white;
 }
