--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
   display: block;
   width: 640px;
   height: 320px;
+  max-width: 100%;
+  max-height: auto;
   background-color: black;
 }
 
